// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupAdminUsers /> render correctly group admin user with confirmation notification when adding a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      admin.fields.group.number_users
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <div
      className="btn-toolbar"
      role="toolbar"
    >
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="fa fa-plus-circle"
        />
         
        group-admin-add-members
      </button>
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="fa fa-upload"
        />
         
        group-admin-add-members-via-file
      </button>
    </div>
    <div
      className="d-ib"
    >
      <div
        className="alert__form_succeeded-message"
      >
        <i
          className="cap cap-android-checkmark-circle"
        />
         
        global.saved
      </div>
    </div>
    <div
      className="mt-15 list-group"
    >
      <span
        className="list-group-item"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-3"
          >
            <img
              alt="<mock-value-for-field-\\"displayName\\">"
              className="sc-bdnxRM img-circle mr-15"
              loading="lazy"
              srcSet="
        http://localhost/cdn-cgi/image/width=320,format=auto/<mock-value-for-field-\\"url\\">   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto/<mock-value-for-field-\\"url\\">   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto/<mock-value-for-field-\\"url\\">   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto/<mock-value-for-field-\\"url\\"> 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto/<mock-value-for-field-\\"url\\"> 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto/<mock-value-for-field-\\"url\\"> 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto/<mock-value-for-field-\\"url\\"> 3x,
         "
            />
            &lt;mock-value-for-field-"displayName"&gt;
          </div>
          <div
            className="pull-right col-xs-4"
          >
            <a
              className="pull-right mt-5 btn btn-danger"
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <i
                className="fa fa-trash"
              />
               
              global.delete
            </a>
          </div>
          <div
            className="col-xs-12"
          >
            <p
              className="mt-10"
            >
              &lt;mock-value-for-field-"email"&gt;
              <span>
                 | 
                &lt;mock-value-for-field-"phone"&gt;
              </span>
            </p>
            <p>
              &lt;mock-value-for-field-"biography"&gt;
            </p>
          </div>
        </div>
      </span>
    </div>
    <span
      className="list-group-item"
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <button
        className="btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        global.more
      </button>
    </span>
    <h3
      className="box-title"
    >
      invitation.pending
    </h3>
    <div
      className="sc-bdnxRM GroupAdminPendingInvitationsList__UserInvitePendingList-jLmjxS  hyLqim"
    >
      <p
        className="sc-bdnxRM isZYbz"
      >
        &lt;mock-value-for-field-"email"&gt;
      </p>
      <p
        className="sc-bdnxRM dyDWxE"
      >
        roles.user
      </p>
    </div>
  </div>
</div>
`;

exports[`<GroupAdminUsers /> render correctly group admin user with confirmation notification when deleting a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      admin.fields.group.number_users
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <div
      className="btn-toolbar"
      role="toolbar"
    >
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="fa fa-plus-circle"
        />
         
        group-admin-add-members
      </button>
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="fa fa-upload"
        />
         
        group-admin-add-members-via-file
      </button>
    </div>
    <div
      className="d-ib"
    >
      <div
        className="alert__form_succeeded-message"
      >
        <i
          className="cap cap-android-checkmark-circle"
        />
         
        global.saved
      </div>
    </div>
    <div
      className="mt-15 list-group"
    >
      <span
        className="list-group-item"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-3"
          >
            <img
              alt="<mock-value-for-field-\\"displayName\\">"
              className="sc-bdnxRM img-circle mr-15"
              loading="lazy"
              srcSet="
        http://localhost/cdn-cgi/image/width=320,format=auto/<mock-value-for-field-\\"url\\">   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto/<mock-value-for-field-\\"url\\">   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto/<mock-value-for-field-\\"url\\">   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto/<mock-value-for-field-\\"url\\"> 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto/<mock-value-for-field-\\"url\\"> 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto/<mock-value-for-field-\\"url\\"> 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto/<mock-value-for-field-\\"url\\"> 3x,
         "
            />
            &lt;mock-value-for-field-"displayName"&gt;
          </div>
          <div
            className="pull-right col-xs-4"
          >
            <a
              className="pull-right mt-5 btn btn-danger"
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <i
                className="fa fa-trash"
              />
               
              global.delete
            </a>
          </div>
          <div
            className="col-xs-12"
          >
            <p
              className="mt-10"
            >
              &lt;mock-value-for-field-"email"&gt;
              <span>
                 | 
                &lt;mock-value-for-field-"phone"&gt;
              </span>
            </p>
            <p>
              &lt;mock-value-for-field-"biography"&gt;
            </p>
          </div>
        </div>
      </span>
    </div>
    <span
      className="list-group-item"
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <button
        className="btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        global.more
      </button>
    </span>
    <h3
      className="box-title"
    >
      invitation.pending
    </h3>
    <div
      className="sc-bdnxRM GroupAdminPendingInvitationsList__UserInvitePendingList-jLmjxS  hyLqim"
    >
      <p
        className="sc-bdnxRM isZYbz"
      >
        &lt;mock-value-for-field-"email"&gt;
      </p>
      <p
        className="sc-bdnxRM dyDWxE"
      >
        roles.user
      </p>
    </div>
  </div>
</div>
`;

exports[`<GroupAdminUsers /> render correctly group admin user with error notification when adding a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      admin.fields.group.number_users
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <div
      className="btn-toolbar"
      role="toolbar"
    >
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="fa fa-plus-circle"
        />
         
        group-admin-add-members
      </button>
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="fa fa-upload"
        />
         
        group-admin-add-members-via-file
      </button>
    </div>
    <div
      className="d-ib"
    >
      <div
        className="alert__form_server-failed-message"
      >
        <i
          className="cap cap-ios-close-outline"
        />
         
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "global.error.server.form",
            }
          }
        />
      </div>
    </div>
    <div
      className="mt-15 list-group"
    >
      <span
        className="list-group-item"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-3"
          >
            <img
              alt="<mock-value-for-field-\\"displayName\\">"
              className="sc-bdnxRM img-circle mr-15"
              loading="lazy"
              srcSet="
        http://localhost/cdn-cgi/image/width=320,format=auto/<mock-value-for-field-\\"url\\">   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto/<mock-value-for-field-\\"url\\">   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto/<mock-value-for-field-\\"url\\">   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto/<mock-value-for-field-\\"url\\"> 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto/<mock-value-for-field-\\"url\\"> 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto/<mock-value-for-field-\\"url\\"> 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto/<mock-value-for-field-\\"url\\"> 3x,
         "
            />
            &lt;mock-value-for-field-"displayName"&gt;
          </div>
          <div
            className="pull-right col-xs-4"
          >
            <a
              className="pull-right mt-5 btn btn-danger"
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <i
                className="fa fa-trash"
              />
               
              global.delete
            </a>
          </div>
          <div
            className="col-xs-12"
          >
            <p
              className="mt-10"
            >
              &lt;mock-value-for-field-"email"&gt;
              <span>
                 | 
                &lt;mock-value-for-field-"phone"&gt;
              </span>
            </p>
            <p>
              &lt;mock-value-for-field-"biography"&gt;
            </p>
          </div>
        </div>
      </span>
    </div>
    <span
      className="list-group-item"
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <button
        className="btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        global.more
      </button>
    </span>
    <h3
      className="box-title"
    >
      invitation.pending
    </h3>
    <div
      className="sc-bdnxRM GroupAdminPendingInvitationsList__UserInvitePendingList-jLmjxS  hyLqim"
    >
      <p
        className="sc-bdnxRM isZYbz"
      >
        &lt;mock-value-for-field-"email"&gt;
      </p>
      <p
        className="sc-bdnxRM dyDWxE"
      >
        roles.user
      </p>
    </div>
  </div>
</div>
`;

exports[`<GroupAdminUsers /> render correctly group admin user with error notification when deleting a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      admin.fields.group.number_users
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <div
      className="btn-toolbar"
      role="toolbar"
    >
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="fa fa-plus-circle"
        />
         
        group-admin-add-members
      </button>
      <button
        className="btn btn-success"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="fa fa-upload"
        />
         
        group-admin-add-members-via-file
      </button>
    </div>
    <div
      className="mt-15 list-group"
    >
      <span
        className="list-group-item"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-3"
          >
            <img
              alt="<mock-value-for-field-\\"displayName\\">"
              className="sc-bdnxRM img-circle mr-15"
              loading="lazy"
              srcSet="
        http://localhost/cdn-cgi/image/width=320,format=auto/<mock-value-for-field-\\"url\\">   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto/<mock-value-for-field-\\"url\\">   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto/<mock-value-for-field-\\"url\\">   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto/<mock-value-for-field-\\"url\\"> 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto/<mock-value-for-field-\\"url\\"> 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto/<mock-value-for-field-\\"url\\"> 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto/<mock-value-for-field-\\"url\\"> 3x,
         "
            />
            &lt;mock-value-for-field-"displayName"&gt;
          </div>
          <div
            className="pull-right col-xs-4"
          >
            <a
              className="pull-right mt-5 btn btn-danger"
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              <i
                className="fa fa-trash"
              />
               
              global.delete
            </a>
          </div>
          <div
            className="col-xs-12"
          >
            <p
              className="mt-10"
            >
              &lt;mock-value-for-field-"email"&gt;
              <span>
                 | 
                &lt;mock-value-for-field-"phone"&gt;
              </span>
            </p>
            <p>
              &lt;mock-value-for-field-"biography"&gt;
            </p>
          </div>
        </div>
      </span>
    </div>
    <span
      className="list-group-item"
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <button
        className="btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        global.more
      </button>
    </span>
    <h3
      className="box-title"
    >
      invitation.pending
    </h3>
    <div
      className="sc-bdnxRM GroupAdminPendingInvitationsList__UserInvitePendingList-jLmjxS  hyLqim"
    >
      <p
        className="sc-bdnxRM isZYbz"
      >
        &lt;mock-value-for-field-"email"&gt;
      </p>
      <p
        className="sc-bdnxRM dyDWxE"
      >
        roles.user
      </p>
    </div>
  </div>
</div>
`;
